# SEDAS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
data/SKSE/Plugins/: SEDAS.toml
docs/: arch-linux-dev-setup.md  no-esp-notes.md  save-hook-notes.md  troubleshooting.md
include/SEDAS/: DeathAlternative.h  Events.h  PCH.h  Plugin.h  Saving.h  Serialization.h  Settings.h  SoulEconomy.h  State.h  UI.h
scripts/: fetch-skmf-header.ps1  fetch-skmf-header.sh
src/: DeathAlternative.cpp  Events.cpp  Plugin.cpp  Saving.cpp  Serialization.cpp  Settings.cpp  SoulEconomy.cpp  State.cpp  UI.cpp
